--- a/app/templates/booking_flow.html
+++ b/app/templates/booking_flow.html
@@ -482,7 +482,7 @@ a.btn.disabled{
 <div id="depositActionWrap">
 {% if booking.rent_paid %}
   {% if not booking.security_paid %}
-    <a href="/paypal/start/{{ booking.id }}?type=securityfund"
+    <a href="/paypal/start/{{ booking.id }}?type=security"
        class="btn btn-outline-soft">
        Pay Security Fund
     </a>
